@@ -39,6 +39,10 @@ optparse = OptionParser.new do |opts|
     options[:source_package_name] = package_name
   end
 
+  opts.on('-w', '--overwrite', 'overwrite existing files (default: don\'t)') do
+    options[:overwrite] = true
+  end
+
   opts.on('', '--ruby-versions VERSIONS', 'ruby versions to use (default: all)') do |versions|
     options[:ruby_versions] = versions
   end
@@ -89,6 +93,11 @@ ruby-$gem, where $gem is the upstream name. If the package is mainly used as a
 library, then it should use the default. On the other hand, if the packages is
 mainly used as an application, then you should drop the ruby- prefix by using
 this option an explicit package u.
+
+=item B<-w>, B<--overwrite>
+
+Overwrites packaging files that already exists but would be created by
+dh-make-ruby if they didn't.
 
 =item B<--ruby-versions VERSIONS>
 
